Glorify case study update

--- a/glorify/index.html
+++ b/glorify/index.html
@@ -451,19 +451,13 @@
     </div>
     <nav class="section-nav">
       <ol>
-        <li><a href="#content1" class="titleRightPanel">Understand</a>
+        <li><a href="#content1" class="titleRightPanel">Research</a>
           <ul>
-            <li class="rightPanel"><a href="#content11"> &#160; Research</a></li>
-            <li class="rightPanel"><a href="#content12"> &#160; Research plan</a></li>
-
-            <li class="rightPanel"><a href="#content13"> &#160; User interview</a></li>
-            <li class="rightPanel"><a href="#content14"> &#160; Insights</a></li>
-            <li class="rightPanel"><a href="#content15"> &#160; Problem statement update</a></li>
-            <li class="rightPanel"><a href="#content16"> &#160; Brainstorm solutions</a></li>
-
+            <li class="rightPanel"><a href="#content11"> &#160; Understand</a></li>
+            <li class="rightPanel"><a href="#content12"> &#160; Define</a></li>
           </ul>
         </li>
-        <li><a href="#content2" class="titleRightPanel">Structure</a>
+        <li><a href="#content2" class="titleRightPanel">Design</a>
           <ul>
             <li class="rightPanel"><a href="#content21"> &#160; Current state </a></li>
             <li class="rightPanel"><a href="#content22"> &#160; Tree testing</a></li>
@@ -471,25 +465,20 @@
         </li>
 
 
-        <li><a href="#content3" class="titleRightPanel">Wireframes</a>
+        <li><a href="#content3" class="titleRightPanel">Iterate</a>
           <ul>
             <li class="rightPanel"><a href="#content31"> &#160; Flows</a></li>
             <li class="rightPanel"><a href="#content32"> &#160; Usability testing</a></li>
           </ul>
         </li>
-        <li><a href="#content4" class="titleRightPanel">Iteration</a>
+        <li><a href="#content4" class="titleRightPanel">Enhance</a>
           <ul>
-            <li class="rightPanel"><a href="#content41"> &#160; Update</a></li>
-            <li class="rightPanel"><a href="#content42"> &#160; Test </a></li>
+            <li class="rightPanel"><a href="#content41"> &#160; Hi-fi prototype</a></li>
+            <li class="rightPanel"><a href="#content42"> &#160; Prototype enhancement </a></li>
 
           </ul>
         </li>
-        <li><a href="#content5" class="titleRightPanel">Final enhancement</a>
-          <ul>
-            <li class="rightPanel"><a href="#content51"> &#160; Hi-fi prototype</a></li>
-            <li class="rightPanel"><a href="#content52"> &#160; Prototype enhancement </a></li>
-          </ul>
-        </li>
+
       </ol>
     </nav>
 
@@ -497,7 +486,7 @@
     <section id="content1" class="wrapper">
       <div class="Grid Grid--full u-textCenter">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Understand</span><img class="moveUpDown widthLogo"
+          <h1 class="Grid Grid--center"> <span>Research</span><img class="moveUpDown widthLogo"
               src="../../icon/icon_research.svg" alt="Research">
           </h1>
         </div>
@@ -505,7 +494,7 @@
       <section id="content11">
         <!-- Arrow -->
         <div class="element">
-          <h2 class="tArrow">Research<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+          <h2 class="tArrow">Understand<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
           </h2>
         </div>
         <!-- Arrow -->
@@ -953,117 +942,74 @@
             </div>
           </div>
         </div>
-        <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
-          id="TBcarouselGlorify1">
-          <div class="TBslides">
-            <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <img class="iconM" src="iconSearch.svg" alt="search">
 
-                    <h3> <strong class="colorGLORIFYOrange"> The participants expressed a range of preferences when it
-                        comes to worship styles and expressions.
-                        The primary benefits that Christians derive from attending such worship include the strength
-                        derived from shared faith, mutual understanding, support, and the opportunity to connect with
-                        others.</strong> </h3>
-
-                    <h4>"To find inspiration, renewal, and empowerment to live out my faith in daily life." - Jennifer
-                      (Participant 3)</h4>
-
-                    <h4>"To experience a sense of community and connection with other believers." - James (Participant
-                      1)</h4>
-
-                    <h4>"To receive teachings and insights that help deepen my faith and understanding." - Sarah
-                      (Participant 2)</h4>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <img class="iconM" src="iconSearch.svg" alt="search">
-
-                    <h3> <strong class="colorGLORIFYOrange"> Participants tend to attend small group events more
-                        frequently due to the enriching discussions and the chance to forge connections with fellow
-                        participants.</strong> </h3>
-
-                    <h4>""I visit small group studies and discussions most frequently. These groups allow me to connect
-                      with peers who share similar experiences and challenges."
-                      - Jennifer (Participant 3)"</h4>
-
-
-                    <h4>"I visit small group Bible studies most frequently. I appreciate the in-depth discussions and
-                      the opportunity to connect with others."
-                      - James (Participant 1)</h4>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <div class="element">
-
-                    <img class="iconM" src="iconSearch.svg" alt="search">
-
-                    <h3> <strong class="colorGLORIFYOrange"> Older participants often gravitate towards contemplative
-                        and introspective worship, while younger participants tend to prefer dynamic and interactive
-                        worship experiences.</strong> </h3>
-
-                    <h4>"I prefer dynamic and interactive worship experiences." - Jennifer (Participant 3)</h4>
-
-                    <h4>"I would like to participate in contemplative and introspective worship." - James (Participant
-                      1)</h4>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="TBslidesItem slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <img class="iconM" src="iconSearch.svg" alt="search">
-
-                    <h3> <strong class="colorGLORIFYOrange"> Participants in group worship often face challenges,
-                        especially when it comes to navigating different interpretations of the worship style or
-                        environment.</strong> </h3>
-
-                    <h4>"It can be difficult to find worship settings that incorporate the dynamic and interactive
-                      elements I seek, such as creative expressions and contemporary styles."
-                      -Jennifer (Participant 3)</h4>
-
-
-
-                    <h4>"It can be challenging to find contemplative and introspective worship settings that align with
-                      my preference for quieter worship environments."
-                      -James (Participant 1)</h4>
-
-                  </div>
-                </div>
-              </div>
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid-cell">
+            <div class="element ">
+              <h4> <strong> Finding 1</strong> </h4>
+              <p>The participants expressed a range of preferences when it comes to worship styles and expressions. The
+                primary benefits that Christians derive from attending such worship include the strength derived from
+                shared faith, mutual understanding, support, and the opportunity to connect with others.
+              </p>
+              <p>"To find inspiration, renewal, and empowerment to live out my faith in daily life." - Jennifer
+                (Participant 3)
+              </p>
+              <p>"To experience a sense of community and connection with other believers." - James (Participant 1)
+              </p>
+              <p>"To receive teachings and insights that help deepen my faith and understanding." - Sarah (Participant
+                2)
+              </p>
             </div>
           </div>
-          <div class="TBcarouselNav Grid-cell noBg">
-            <a class="TBsliderNav" aria-label="Go to slide 1">
-              <div>Finding 1</div>
-            </a>
-            <a class="TBsliderNav" aria-label="Go to slide 2">
-              <div>Finding 2</div>
-            </a>
-            <a class="TBsliderNav" aria-label="Go to slide 3">
-              <div>Finding 3</div>
-            </a>
-            <a class="TBsliderNav" aria-label="Go to slide 4">
-              <div>Finding 4</div>
-            </a>
+          <div class="Grid-cell">
+            <div class="element">
+              <h4> <strong> Finding 2</strong> </h4>
+              <p>Participants tend to attend small group events more frequently due to the enriching discussions and the
+                chance to forge connections with fellow participants.
+              </p>
+              <p>"I visit small group studies and discussions most frequently. These groups allow me to connect with
+                peers who share similar experiences and challenges." - Jennifer (Participant 3)"
+              </p>
+              <p>"I visit small group Bible studies most frequently. I appreciate the in-depth discussions and the
+                opportunity to connect with others." - James (Participant 1)
+              </p>
+            </div>
           </div>
         </div>
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid-cell">
+            <div class="element ">
+
+              <h4><strong> Finding 3</strong> </h4>
+              <p>Older participants often gravitate towards contemplative and introspective worship, while younger
+                participants tend to prefer dynamic and interactive worship experiences.
+              </p>
+              <p>"I prefer dynamic and interactive worship experiences." - Jennifer (Participant 3)
+              </p>
+              <p>"I would like to participate in contemplative and introspective worship." - James (Participant 1)
+              </p>
+
+
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h4> <strong> Finding 4</strong> </h4>
+              <p>Participants in group worship often face challenges, especially when it comes to navigating different
+                interpretations of the worship style or environment.
+              </p>
+              <p>"It can be difficult to find worship settings that incorporate the dynamic and interactive elements I
+                seek, such as creative expressions and contemporary styles." -Jennifer (Participant 3)
+              </p>
+              <p>"It can be challenging to find contemplative and introspective worship settings that align with my
+                preference for quieter worship environments." -James (Participant 1)
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+
       </section>
       <div class="blankHS"></div>
 
@@ -1211,7 +1157,7 @@
       <div class="Grid Grid--full">
         <div class="Grid-cell">
           <div class="element">
-            <h2> <strong class="colorGLORIFYOrange"> Problem update</strong> </h2>
+            <h2> <strong class="colorGLORIFYOrange"> Problem statement update</strong> </h2>
           </div>
         </div>
       </div>
@@ -1427,7 +1373,7 @@
 
             <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The goal
               is to help users discover like-minded individuals during group prayer sessions.</p>
-              <p>With the app, users can:</p>
+            <p>With the app, users can:</p>
             <ul>
               <li class="listCircle">Create a group prayer room </li>
               <li class="listCircle">Discover group prayers that align with their interests </li>
@@ -1443,7 +1389,7 @@
             <h4> <strong>Concept B</strong> </h4>
             <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The goal
               is to help users discover like-minded individuals during group prayer sessions.</p>
-              <p>With the app, users can:</p>
+            <p>With the app, users can:</p>
             <ul>
               <li class="listCircle">Create a Bible study room </li>
               <li class="listCircle">Discover topics that align with their interests</li>
@@ -1459,11 +1405,54 @@
         <div class="Grid-cell">
           <div class="element">
             <h4> <strong> Conclusion </strong> </h4>
-            <p>That's the end of our session! Thank you for providing your thoughts on these concepts. I appreciate your time.</p>
+            <p>That's the end of our session! Thank you for providing your thoughts on these concepts. I appreciate your
+              time.</p>
           </div>
         </div>
       </div>
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2> <strong class="colorGLORIFYOrange"> Reflection &#38; Iteration Ideas </strong> </h2>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-3">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong> What feedback did you receive about Concept A? </strong> </h4>
 
+            <ul>
+              <li>The concept is an extension of the existing prayer feature in the app.</li>
+              <li>In addition to praying together, users may also wish to communicate while they are waiting.</li>
+              <li>Perhaps there could be an alternative method for users to interact with other fellowships without
+                needing to send a formal fellowship request.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong> What feedback did you receive about Concept B? </strong> </h4>
+            <ul>
+              <li>It becomes quite complex when bible study is restricted to keyboard-based chatting only.</li>
+              <li>Discussing only one topic may become monotonous.</li>
+              <li>Spending too much time in a room can lead to losing focus on the topic.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element ">
+            <h4> <strong> I'd like to iterate on Concept A (Group prayer) by adding some elements from Concept B
+                (Chatting before group prayer start).</strong> </h4>
+            <ul>
+              <li>In the new iteration, users inside the group prayer room have the ability to chat with each other
+                before the group prayer session begins.</li>
+              <li>The app will retain the history of group prayers, including the fellowships who participated in the
+                prayer sessions together. </li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <section id="content13">
 
 
