--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2155,10 +2155,13 @@
 
 
   <!-- The Modal -->
+
+
   <div id="modal" class="modal">
-    <span id="modal-close" class="modal-close"><img class="iconXforModal" src="../icon/delete.svg" alt="linkedin">
+    <span id="modal-close" class="modal-close">
+      <img class="iconXforModal" src="../icon/delete.svg" alt="&times;">
     </span>
-    <img id="modal-content" class="modal-content ">
+    <img id="modal-content" class="modal-content">
     <div id="modal-caption" class="modal-caption"></div>
   </div>
   <!-- The Modal -->
