--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1654,12 +1654,10 @@
             </div>
 
             <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid Grid--full">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="Grid">
-                      <img class="modal-target" src="Research_SiteMap.svg" alt="Sitemap">
-                    </div>
+                    <img class="modal-target" src="Research_SiteMap.svg" alt="Sitemap">
                   </div>
                 </div>
               </div>
@@ -1743,7 +1741,7 @@
           <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
             id="TBcarouselGlorify3">
             <div class="TBslides">
-              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
                 <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
                   <div class="Grid-cell ">
                     <div class="element"> <img class="widthXS cardBorderThick"
@@ -1761,7 +1759,7 @@
                   </div>
                 </div>
               </div>
-              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
                 <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
                   <div class="Grid-cell ">
                     <div class="element"> <img class="widthXS cardBorderThick"
@@ -1779,7 +1777,7 @@
                   </div>
                 </div>
               </div>
-              <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+              <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
                 <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
                   <div class="Grid-cell ">
                     <div class="element"> <img class="widthXS cardBorderThick"
@@ -2107,126 +2105,51 @@
               </div>
             </div>
             <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
-            id="TBcarouselGlorify3">
-            <div class="TBslides">
-              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
-                <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
-                  <div class="Grid-cell ">
-                    <div class="element"> <img class="widthXS cardBorderThick"
-                        src="Design_wireframe_gif_groupprayer_create.gif" alt="New User">
-                    </div>
-
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="element">
-                      <div class="Grid">
-                        <img class="modal-target" src="Design_Flow_groupprayer_create.svg" alt="Create group prayer">
+              id="TBcarouselGlorify6">
+              <div class="TBslides">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+                  <div class="Grid Grid--full">
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <img class="modal-target" src="Iterate_Flow_GroupPrayer_Join.png" alt="Sitemap">
                       </div>
                     </div>
-
                   </div>
                 </div>
-              </div>
-              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
-                <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
-                  <div class="Grid-cell ">
-                    <div class="element"> <img class="widthXS cardBorderThick"
-                        src="Design_wireframe_gif_groupprayer_participate.gif" alt="Participate group prayer">
-                    </div>
-
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="element">
-                      <div class="Grid">
-                        <img class="modal-target" src="Design_Flow_groupprayer_participate.svg" alt="Hi-fi prototype">
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
+                  <div class="Grid Grid--full">
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <img class="modal-target" src="Iterate_Flow_GroupPrayer_PrayDetails.png" alt="Sitemap">
                       </div>
                     </div>
-
                   </div>
                 </div>
-              </div>
-              <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
-                <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
-                  <div class="Grid-cell ">
-                    <div class="element"> <img class="widthXS cardBorderThick"
-                        src="Design_wireframe_gif_groupprayer_leave.gif" alt="Leave group prayer">
-                    </div>
-
-                  </div>
-                  <div class="Grid-cell">
-                    <div class="element">
-                      <div class="Grid">
-                        <img class="modal-target" src="Design_Flow_groupprayer_leave.svg" alt="Leave group prayer">
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
+                  <div class="Grid Grid--full">
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <img class="modal-target" src="Iterate_Flow_GroupPrayer_Pray.png" alt="Sitemap">
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <div class="TBcarouselNav Grid-cell noBg">
+                <a class="TBsliderNav" aria-label="Go to slide 1">
+                  <div>Join group prayer</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 2">
+                  <div>Wait pray</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 3">
+                  <div>Start pray</div>
+                </a>
+              </div>
+            </div>
 
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="TBcarouselNav Grid-cell noBg">
-              <a class="TBsliderNav" aria-label="Go to slide 1">
-                <div>Create</div>
-              </a>
-              <a class="TBsliderNav" aria-label="Go to slide 2">
-                <div>Participate</div>
-              </a>
-              <a class="TBsliderNav" aria-label="Go to slide 3">
-                <div>Leave</div>
-              </a>
-            </div>
-
-          </div>
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="Iterate_Flow_GroupPrayer_Join.png" alt="Group prayer">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="Iterate_Flow_GroupPrayer_PrayDetails.png" alt="Group prayer">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="Iterate_Flow_GroupPrayer_Pray.png" alt="Group prayer">
-                  </div>
-                </div>
-              </div>
-            </div>
 
             <div class="blankHS"></div>
-
-            <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-              <div class="Grid-cell ">
-                <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif"
-                    alt="Delete message">
-                </div>
-                <div class="element">
-                  <h4> Delete message</h4>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="Iterate_Flow_Fellowship_Add.png" alt="Delete message">
-                  </div>
-                </div>
-                <div class="element">
-                  <h4> Delete message</h4>
-                </div>
-              </div>
-            </div>
             <div class="Grid Grid--full">
               <div class="Grid-cell">
                 <div class="element">
@@ -2234,6 +2157,77 @@
                 </div>
               </div>
             </div>
+            <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
+              id="TBcarouselGlorify7">
+              <div class="TBslides">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
+                    <div class="Grid-cell">
+                      <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Fellowship_Add.gif"
+                          alt="Delete">
+                      </div>
+                    </div>
+  
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="Iterate_Flow_Fellowship_Add.png" alt="Add fellowship">
+                        </div>
+                      </div>
+  
+                    </div>
+                  </div>
+                </div>
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
+                    <div class="Grid-cell">
+                      <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Fellowship_withdraw.gif"
+                          alt="Delete">
+                      </div>
+                    </div>
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="Iterate_Flow_Fellowship_withdraw.png" alt="Add fellowship">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
+                    <div class="Grid-cell">
+                      <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Fellowship_remove.gif"
+                          alt="Delete">
+                      </div>
+                    </div>
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="Iterate_Flow_Fellowship_remove.png" alt="Add fellowship">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+              <div class="TBcarouselNav Grid-cell noBg">
+                <a class="TBsliderNav" aria-label="Go to slide 1">
+                  <div>Add fellowship</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 2">
+                  <div>Withdraw request</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 3">
+                  <div>Remove fellowship</div>
+                </a>
+              </div>
+            </div>
+
+
+
             <div class="Grid Grid--full">
               <div class="Grid-cell">
                 <div class="element">
