--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2061,8 +2061,10 @@
                 <div class="element ">
                   <h4> <strong> Foundings and iteration</strong> </h4>
                   <ul>
-                    <li>x</li>
-                    <li>x</li>
+                    <li></li>
+
+                    <li>Focus on the group prayer experience</li>
+                    <li>ensure the design solution is able to achieve the goal</li>
                   </ul>
                 </div>
               </div>
@@ -2140,10 +2142,10 @@
                   <div>Join group prayer</div>
                 </a>
                 <a class="TBsliderNav" aria-label="Go to slide 2">
-                  <div>Wait pray</div>
+                  <div>Wait to pray</div>
                 </a>
                 <a class="TBsliderNav" aria-label="Go to slide 3">
-                  <div>Start pray</div>
+                  <div>Begin praying</div>
                 </a>
               </div>
             </div>
@@ -2167,22 +2169,22 @@
                           alt="Delete">
                       </div>
                     </div>
-  
+
                     <div class="Grid-cell">
                       <div class="element">
                         <div class="Grid">
                           <img class="modal-target" src="Iterate_Flow_Fellowship_Add.png" alt="Add fellowship">
                         </div>
                       </div>
-  
+
                     </div>
                   </div>
                 </div>
                 <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
                   <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
                     <div class="Grid-cell">
-                      <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Fellowship_withdraw.gif"
-                          alt="Delete">
+                      <div class="element"> <img class="widthXS cardBorderThick"
+                          src="Iterate_Flow_Fellowship_withdraw.gif" alt="Delete">
                       </div>
                     </div>
                     <div class="Grid-cell">
@@ -2198,8 +2200,8 @@
                 <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 3" tabindex="0">
                   <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
                     <div class="Grid-cell">
-                      <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Fellowship_remove.gif"
-                          alt="Delete">
+                      <div class="element"> <img class="widthXS cardBorderThick"
+                          src="Iterate_Flow_Fellowship_remove.gif" alt="Delete">
                       </div>
                     </div>
                     <div class="Grid-cell">
@@ -2233,6 +2235,22 @@
                 <div class="element">
                   <h2> <strong class="colorGLORIFYOrange"> Chat</strong> </h2>
                 </div>
+              </div>
+            </div>
+            <div class="Grid Grid--gutters Grid--1of3 Grid--center u-textCenter">
+              <div class="Grid-cell">
+                <div class="element"> <img class="widthXS cardBorderThick" src="Iterate_Flow_Chat.gif"
+                    alt="Delete">
+                </div>
+              </div>
+
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <img class="modal-target" src="Iterate_Flow_Chat.png" alt="Add fellowship">
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
@@ -2402,6 +2420,14 @@
               </div>
             </div>
             <!-- Arrow -->
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2> <strong class="colorGLORIFYOrange"> Overall flow</strong> </h2>
+                </div>
+              </div>
+            </div>
+
             <div class="Grid Grid--full u-textCenter wrapper">
               <div class="Grid-cell">
                 <div class="element">
@@ -2415,66 +2441,84 @@
               </div>
             </div>
 
+
+            <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+              id="TBcarousel1">
+              <div class="TBslides">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                    <div class="Grid-cell ">
+                      <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif"
+                          alt="Quick start group prayer">
+                      </div>
+            
+                    </div>
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="HiFi_GroupPrayer_QuickStart.png"
+                            alt="Quick start group prayer">
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                    <div class="Grid-cell ">
+                      <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_CustomPtt.gif"
+                          alt="Customized group prayer">
+                      </div>
+
+                    </div>
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="HiFi_GroupPrayer_Custom.png" alt="Customized group prayer">
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                  <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
+                    <div class="Grid-cell ">
+                      <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_JoinPtt.gif"
+                          alt="Join group prayer">
+                      </div>
+
+                    </div>
+                    <div class="Grid-cell">
+                      <div class="element">
+                        <div class="Grid">
+                          <img class="modal-target" src="HiFi_GroupPrayer_Join.png" alt="Join group prayer">
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="TBcarouselNav Grid-cell">
+                <a class="TBsliderNav" aria-label="Go to slide 1">
+                  <div>Quick start</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 2">
+                  <div>Customized </div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 3">
+                  <div>Join</div>
+                </a>
+              </div>
+              <div class="blankHS"></div>
+            </div>
+            <div class="blankHXS"></div>
             <div class="blankHS"></div>
-            <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-              <div class="Grid-cell ">
-                <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif"
-                    alt="Quick start group prayer">
-                </div>
-                <div class="element">
-                  <h4> Quick start group prayer prototype</h4>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="HiFi_GroupPrayer_QuickStart.png" alt="Quick start group prayer">
-                  </div>
-                </div>
-                <div class="element">
-                  <h4>Quick start group prayer flow </h4>
-                </div>
-              </div>
-            </div>
-            <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-              <div class="Grid-cell ">
-                <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_CustomPtt.gif"
-                    alt="Customized group prayer">
-                </div>
-                <div class="element">
-                  <h4> Customized group prayer prototype</h4>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="HiFi_GroupPrayer_Custom.png" alt="Customized group prayer">
-                  </div>
-                </div>
-                <div class="element">
-                  <h4> Customized group prayer flow </h4>
-                </div>
-              </div>
-            </div>
-            <div class="Grid Grid--gutters Grid--1of3 wrapper u-textCenter">
-              <div class="Grid-cell ">
-                <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_JoinPtt.gif" alt="Join group prayer">
-                </div>
-                <div class="element">
-                  <h4> Join group prayer prototype</h4>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="HiFi_GroupPrayer_Join.png" alt="Join group prayer">
-                  </div>
-                </div>
-                <div class="element">
-                  <h4> Join group prayer flow </h4>
-                </div>
-              </div>
-            </div>
+
+
+
 
           </section>
           <div class="blankHS"></div>
